2006-10-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.9975-3

	* R/diagMatrix.R (bdiag): new function constructing block diagonal
	(sparse) matrices.
	* man/bdiag.Rd: docu + examples

	* R/Csparse.R (replCmat): calling new Csparse_drop() now.

	* src/Csparse.c (Csparse_general_to_symmetric, Csparse_drop): new functions
	* R/lsCMatrix.R: three more coercions to lsC (thanks to the above)

	* R/diagMatrix.R (Diagonal): '[<-' method for diag.matrices such
	that result is sparse or diagonal (and not dense).

	* man/Subassign-methods.Rd: fix examples

	* R/Matrix.R (Matrix):  Matrix(0, *) or Matrix(*, sparse=TRUE)
	should always return a sparse (and not sometimes a diagonal) matrix.

2006-10-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R ([<-): also for value "Matrix" or "matrix"

2006-10-04  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): 0.9975-2

	* inst/include/Matrix_stubs.c (M_cholmod_sparse_to_triplet): export more symbols

2006-10-02  Douglas Bates  <bates@R-project.org>

	* tests/dg_Matrix.R: Simplify test taking into account new code.

2006-09-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Csparse.R (replCmat): improve for missing i / j in non-simple cases

	* R/lsTMatrix.R: new files w/ missing methods
	* R/nsTMatrix.R:  "  'for completeness'

	* tests/Class+Meth.R: a bit less 'not.ok.classes'

	* R/Tsparse.R (t): generalized "t" method from "dgT*" to "Tsparse*"


2006-09-28  Douglas Bates  <bates@R-project.org>

	* src/dppMatrix.h: Ensure definition of dspMatrix_validate is
	included.

	* src/init.c, inst/include/{Matrix.h,Matrix_stubs.h,cholmod.h}:
	Export C-callable functions used in Zt_create in lme4.

2006-09-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.9975-1

	* tests/simple.R: less checks fail; using NA, found that our
		kronecker() is not base-compatible with NA's.

	* R/dMatrix.R: "Compare" method now implemented for all cases
